Get users @ MySQL
