# storage/api-docs/api-docs.json
@@ -16,9 +16,39 @@
     ],
     "paths": {
         "/users": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get collection of Users",
+                "description": "Returns list of users",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "In a GET request, the response will contain an entity corresponding to the requested resource in this instance Bankaccount",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "The requested resource could not be found but may be available in the future, or the route might be wrong. Subsequent requests by the client are permissible."
+                    },
+                    "405": {
+                        "description": "The resource method is not allowed. i.e post without payload",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            },
             "post": {
                 "tags": [
-                    "store"
+                    "User"
                 ],
                 "summary": "Register a new user on the system.",
                 "description": "Creates user, then kicks off the registration process.",
